<resources>
    <string name="app_name">Unopp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="create_new_game">Neues Spiel erstellen</string>
    <string name="existing_games">Vorhandene Spiele</string>
    <string name="title_activity_new_game">Neues Spiel erstellen</string>
    <string name="title_activity_game_details">Spielübersicht</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="pick_color">Wähle eine Farbe</string>
    <string name="action_leavegame">Spiel verlassen</string>
    <string name="action_credits">Credits</string>
    <string name="action_help">Hilfe</string>
    <string name="action_startgame">Spiel starten</string>
    <string name="action_deletegame">Spiel löschen</string>
    <string name="action_newGame">Neues Spiel</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_deleteAllGames">Alle Spiele löschen</string>
    <string name="error">Error</string>
    <string name="action_endGameRound">Runde beenden</string>
    <string name="action_sortHand">Hand sortieren</string>
    <string name="title_activity_game_round_summary">Ergebnis der Spielrunde</string>
    <string name="cheatDialogMessage">Von welchem Spieler möchtest du eine Karte anschauen?</string>
    <string name="cancel">Abbrechen</string>
    <string name="title_activity_help">Spielanleitung</string>
</resources>
