<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".LobbyActivity">
    <item android:id="@+id/action_settings"     android:title="@string/action_settings" android:orderInCategory="100" app:showAsAction="never"    />
    <item android:id="@+id/action_newGame"      android:title="@string/action_newGame"  android:orderInCategory="1"   app:showAsAction="always"   />
    <item android:id="@+id/action_refresh"      android:title="@string/action_refresh"  android:orderInCategory="2"   app:showAsAction="always"   />
    <item android:id="@+id/action_aau"          android:title="AAU"      android:orderInCategory="3" android:icon="@drawable/aau_icon_white"  app:showAsAction="always" />
    <item android:id="@+id/action_deleteAllGames" android:title="@string/action_deleteAllGames"  android:orderInCategory="4"   app:showAsAction="never"   />
</menu>
